--- a/index.html
+++ b/index.html
@@ -5,6 +5,172 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="fonts/fonts.css"
+          />
+    <link rel="stylesheet" href="styles/global.css"
+          />
+    <link rel="stylesheet" href="styles/style.css"
+          />
   </head>
-  <body></body>
-</html>
+  <body>
+    <!--Начало шапки-->
+    <header class="header content-box">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active text-link" href="#0">главная</a>
+          </li>
+          <li class="header__links-list-item text-link">
+            <a class="header__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item text-link">
+            <a class="header__link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <!--Логотип-->
+      <div class="header__logo">
+        <img class="header__logo-image" src="images/logo-black.svg" alt="Логотип с тексто 'Оно тебе надо'"
+        />
+      </div>
+      <!--Адрес-->
+      <address class="header__address">
+        <a class="address__item text-link" href="tel:+99995555555">+9 999 555 5555
+        </a>
+        <a class="address__item text-link" href="mailto:info@sobaka.ge">info@sobaka.ge
+        </a>
+        <p class="address__address-text">наб. Принсенграхт 263 -<br>265, Амстердам
+        </p>
+      </address>
+    </header>
+    <!--Конец шапки-->
+    <main>
+    <!--Начало области с мазюками краски--> 
+    <section class="cover content-box">
+      <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text"
+            >о<span class="letter-spacing-extended">но</span></span
+          >
+          <span class="aligned-text aligned-text_center"
+            >те<span class="letter-spacing-extended">бе</span></span
+          >
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extended">н</span>ад<span class="remove-spacing">о</span></span
+          >
+        </h1>
+      <div>
+        <div class="cover__description">
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="button">Сделать ставку</button>
+        </div>
+      </div>
+    </section>
+    <!--Конец области мазюк краски-->
+    <!--Начало карточек-->
+    <section class="lots content-box">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — 
+                  Пол Томас Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+    <!--Конец карточек-->
+        <a class="lots__look-more-link text-link" href="#0">посмотреть больше</a>
+      </section>
+    <!--Начало контейнера об аукционе-->
+      <section class="about content-box">
+        <div class="about__column">
+          <div class="about__logo">
+            <img class="about__logo-image" src="/ono-tebe-nado/images/logo-white.svg" alt="логотип в кружке с надписью оно тебе надо"> 
+          </div>
+        </div>
+        <div class="about__column">
+          <h2 class="about__title">Об аукционе</h2>
+          <div class="about__text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+              Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина,
+              которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. 
+              Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. 
+              Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+            </p>
+          </div>
+        </div>
+      </section>
+    <!--Конец контейнера об аукционе-->
+    </main>
+    <!--Подвал-->
+      <footer class="footer__menu-section"> 
+        <address class="footer__address"> 
+           <a class="address__item text-link" href="tel:+99995555555">+9 999 555 5555</a> 
+           <a class="address__item text-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a> 
+           <p class="footer__address-maps">наб. Принсенграхт 263-,<br />265 Амстердам</p> 
+         </address> 
+         <nav class="footer__menu"> 
+           <ul class="footer__menu-list"> 
+               <a class="footer__links-list-item_no-bullit">главная</a> 
+               <li class="footer__menu-item"> 
+                 <a class ="footer__menu-link" href="#">посмотреть лоты</a> 
+               </li> 
+               <li class="footer__menu-item"> 
+                 <a class ="footer__menu-link" href="#">об аукционе</a> 
+               </li> 
+           </ul> 
+           <a class="footer__social-list"> 
+             <img 
+               class="footer__logo-image" 
+               alt="Социальные сети" src="/ono-tebe-nado/images/yt.svg" alt="логотип ютуба"> 
+             <img 
+               class="footer__social-vk" src="/ono-tebe-nado/images/vk.svg" alt="логотип вк"> 
+             <img 
+               class="footer__logo-yt"  src="/ono-tebe-nado/images/pinterest.svg" alt="логотип пинтерес"> 
+           </a> 
+       </footer>   
+  </body>
+  </html>
