--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             />
           </div>
         </div>
-        <div class="about__column">
+        <div class="about__column__text">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>
@@ -186,7 +186,7 @@
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <div class="footer__links-list-item_no-bullit">главная</div>
+          <li class="footer__links-list-item_no-bullit">главная</li>
           <li class="footer__menu-item">
             <a class="footer__menu-link" href="#">посмотреть лоты</a>
           </li>
@@ -194,6 +194,7 @@
             <a class="footer__menu-link" href="#">об аукционе</a>
           </li>
         </ul>
+      </nav>
         <a class="footer__social-list">
           <img
             class="footer__logo-image"
@@ -211,7 +212,7 @@
             alt="логотип пинтерес"
           />
         </a>
-      </nav>
+      
     </footer>
   </body>
 </html>
