--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="about__logo">
             <img
               class="about__logo-image"
-              src="/ono-tebe-nado/images/logo-white.svg"
+              src="../ono-tebe-nado/images/logo-white.svg"
               alt="логотип в кружке с надписью оно тебе надо"
             />
           </div>
@@ -200,17 +200,17 @@
         <a class="footer__social-list">
           <img
             class="footer__logo-image"
-            src="/ono-tebe-nado/images/yt.svg"
+            src="../ono-tebe-nado/images/yt.svg"
             alt="логотип ютуба"
           />
           <img
             class="footer__social-vk"
-            src="/ono-tebe-nado/images/vk.svg"
+            src="../ono-tebe-nado/images/vk.svg"
             alt="логотип вк"
           />
           <img
             class="footer__logo-yt"
-            src="/ono-tebe-nado/images/pinterest.svg"
+            src="../ono-tebe-nado/images/pinterest.svg"
             alt="логотип пинтерес"
           />
         </a>
