--- a/index.html
+++ b/index.html
@@ -184,8 +184,9 @@
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-item"></li>
+          <li class="footer__menu-item">
             <a class="footer__links-list-item_no-bullit" href="#">главная</a>
+          </li>
           <li class="footer__menu-item">
             <a class="footer__menu-link" href="#">посмотреть лоты</a>
           </li>
