--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p class="cover__description-text">
               Аукцион вещей, в которые никто не верил
             </p>
-            <button class="button" type="submit">Сделать ставку</button>
+            <button class="button" type="button">Сделать ставку</button>
           </div>
       </section>
       <!--Конец области мазюк краски-->
@@ -178,14 +178,14 @@
         <a class="address__item text-link" href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a
         >
-        <p class="footer__address-maps">
+        <p class="address__address-text">
           наб. Принсенграхт 263-,<br />265 Амстердам
         </p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-item">
-            <a class="footer__links-list-item_no-bullit" href="#">главная</a>
+            <a class="footer__menu-link footer__menu-link_active" href="#">главная</a>
           </li>
           <li class="footer__menu-item">
             <a class="footer__menu-link" href="#">посмотреть лоты</a>
