--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
               на критику, кажущуюся простоту или сложность, сейчас без этих
               лотов невозможно представить современную культуру. Когда в эти
-              вещи не верил никто, продолжали верить их создатели. И сейчас эти
-              лоты стали культовыми.
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты 
+              стали культовыми.
             </p>
           </div>
         </div>
