--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
             ></span
           >
         </h1>
-          <div class="cover__description">
-            <p class="cover__description-text">
-              Аукцион вещей, в которые никто не верил
-            </p>
-            <button class="button" type="button">Сделать ставку</button>
-          </div>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="button" type="button">Сделать ставку</button>
+        </div>
       </section>
       <!--Конец области мазюк краски-->
       <!--Начало карточек-->
@@ -161,8 +161,8 @@
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
               на критику, кажущуюся простоту или сложность, сейчас без этих
               лотов невозможно представить современную культуру. Когда в эти
-              вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты 
-              стали культовыми.
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
             </p>
           </div>
         </div>
@@ -185,7 +185,9 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-item">
-            <a class="footer__menu-link footer__menu-link_active" href="#">главная</a>
+            <a class="footer__menu-link footer__menu-link_active" href="#"
+              >главная</a
+            >
           </li>
           <li class="footer__menu-item">
             <a class="footer__menu-link" href="#">посмотреть лоты</a>
@@ -195,8 +197,8 @@
           </li>
         </ul>
       </nav>
-        <div class="footer__social-list">
-         <a href="https://www.youtube.com/"> 
+      <div class="footer__social-list">
+        <a href="https://www.youtube.com/">
           <img
             class="footer__logo Youtube"
             src="./images/yt.svg"
@@ -204,11 +206,7 @@
           />
         </a>
         <a href="https://vk.com/">
-          <img
-            class="footer__logo VK"
-            src="./images/vk.svg"
-            alt="логотип вк"
-          />
+          <img class="footer__logo VK" src="./images/vk.svg" alt="логотип вк" />
         </a>
         <a href="https://ru.pinterest.com/">
           <img
@@ -217,7 +215,7 @@
             alt="логотип пинтерес"
           />
         </a>
-        </div>
+      </div>
     </footer>
   </body>
 </html>
