--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-item">
-            <a class="footer__menu-link footer__menu-link_active" href="#"
+            <a class="footer__menu-link footer__menu-link_active" href="#0"
               >главная</a
             >
           </li>
