--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         />
       </a>
       <!--Адрес-->
-      <address class="address">
+      <address class="address header__address">
         <a class="address__item text-link" href="tel:+99995555555"
           >+9 999 555 5555
         </a>
